# thrystr

./: .clang-tidy  .gitignore  .gitleaks.toml  .gitleaksignore  CMakeLists.txt  CODE_REVIEW.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  NOTICE  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/internal/: OPCODE_STREAM.md
docs/user/: AUTHOR_GUIDE.md  auto-fit.md  file-browser.md  fit-validation.md  index.md  interpolated-waves.md  keyboard.md  loading-source.md  playback.md  sections.md  settings.md  the-plot-view.md  tracks-and-parity.md  value-mappers.md  wave-settings.md  waves.md
include/thrystr/: render_io.hpp  scalar_analysis.hpp
include/thrystr/app/: convergent_fit.hpp  fit_validation.hpp  multi_track_fit.hpp  workspace.hpp
include/thrystr/gui/: component.hpp  controls.hpp  file_dialog.hpp  font_loader.hpp  icons.hpp  image.hpp  interface_session.hpp  interface_types.hpp  native_application.hpp  native_window.hpp  palette.hpp  palette_accent.hpp  palette_geometry.hpp  palette_helpers.hpp  palette_surface.hpp  resize_cursor_set.hpp  runtime_config.hpp  splash.hpp  style.hpp  timeline_draw.hpp  timeline_playback.hpp  window_types.hpp
include/thrystr/model/: dataset.hpp  entity.hpp  fitter.hpp  node_graph.hpp  property_bag.hpp  standard_math.hpp  workspace.hpp
include/thrystr/ui/: window.hpp
scripts/: vendor_glfw.sh  vendor_imgui.sh  vendor_skald.sh  vendor_stb.sh
src/: main.cpp  render_io.cpp  scalar_analysis.cpp
src/app/: convergent_fit.cpp  fit_validation.cpp  multi_track_fit.cpp  workspace.cpp
src/gui/interface/: IMGUI_VERSION.txt  imconfig.h
src/gui/system/: component.cpp  control_bridge.hpp  control_buttons.cpp  control_row_text.cpp  control_row_tone.cpp  control_rows.cpp  control_rows_internal.hpp  control_style.cpp  control_style.hpp  control_tooltip.cpp  file_dialog_actions.cpp  file_dialog_bridge.cpp  file_dialog_bridge.hpp  file_dialog_entry.cpp  file_dialog_fields.cpp  file_dialog_listing.cpp  file_dialog_parts.hpp  file_dialog_state_bridge.cpp  font_assets.cpp  font_assets.hpp  font_loader.cpp  image_pipeline.hpp  image_pixels.cpp  image_png.cpp  image_png_io.cpp  image_png_io.hpp  image_png_load.cpp  image_png_rows.cpp  image_texture.cpp  interface_session_frame.cpp  interface_session_lifecycle.cpp  interface_types.cpp  native_application.cpp  native_window_backend.hpp  native_window_create.cpp  native_window_decoration.cpp  native_window_glfw_platform.hpp  native_window_lifecycle.cpp  native_window_metrics.cpp  native_window_move.cpp  (+26 more)
src/model/: dataset.cpp  entity.cpp  fitter.cpp  node_graph.cpp  property_bag.cpp  standard_math.cpp  workspace.cpp
src/ui/: window.cpp
tests/: app_model_tests.cpp  app_multi_track_fit_tests.cpp  gui_boundary_tests.cpp  gui_style_tests.cpp  gui_timeline_tests.cpp  gui_window_tests.cpp  model_tests.cpp  scalar_analysis_tests.cpp
tests/fuzz/: fuzz_wave_settings.cpp
tools/docgen/: main.cpp
